--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@
 
 body {
   font-family: "Poppins", sans-serif;
+  background: linear-gradient(to bottom right, #fdfbfb, #ebedee);
+  color: var(--text);
 }
 
 html {
